--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,3 +20,22 @@ p {
     font-size: 36px;
     margin-bottom: 20px;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+/* Define column widths */
+td:first-child {
+    width: 25%;
+}
+
+td:last-child {
+    width: 75%;
+}
