Cursor is now pointer on label mouseover

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     background-color: #444654;
     color: #d1d5db;
+    font-family: Arial, sans-serif;
 }
 
 .center {
@@ -48,4 +49,8 @@ td:last-child {
 
 input[type="checkbox"]:focus {
     outline: none;
+}
+
+label {
+    cursor: pointer;
 }
