--- a/assets/styles.css
+++ b/assets/styles.css
@@ -96,3 +96,29 @@ label {
 #byline {
     font-size: 12px;
 }
+
+header {
+    background-color: #202123;
+    color: #fff;
+    padding: 10px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav li a { 
+    color: #fff;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    text-decoration: underline;
+}
